# routes/authRoutes.js
@@ -12,19 +12,32 @@ router.get("/", (req, res) => {
  * @route POST api/users
  * @access Private available for Admin
  */
-router.post("/register", middleware.validateRegister, auth.authRegisterUser);
-
-// Completer la creation de compte  
-router.post("/complete-registration/:userId", auth.completeRegistration);
-
-
+router.post("/register", middleware.validateRegister, auth.authRegisterUser)
 
 /**
  * @desc Route to log a user
  * @route POST api/users
  * @access Private available for Admin
  */
-router.post("/login", middleware.validateLogin, auth.authLoginUser);
+router.post("/login", middleware.validateLogin, auth.authLoginUser)
+
+
+// Completer la creation de compte  
+router.post("/complete-registration/:userId", middleware.validateCompleteRegistration, auth.completeRegistration)
+
+
+
+// Changer le mot de passe 
+router.post("/change-password/:userId", middleware.validateChangePassword, auth.changePassword)
+
+
+// Réinitialiser le mot de passe 
+router.post("/reset-password/:userId", middleware.validateResetPassword, auth.resetPassword)
+
+
+// Mettre a jour ces informations 
+router.put("/update-info-user/:userId", middleware.validateUpdateUserInfo, auth.updateUserInfo)
+
 
 module.exports = router;
 
